# continuum

./: .gitignore  CMakeLists.txt  README.md
.github/: labeler.yml  labler.yml
.github/workflows/: label.yml
cmake/modules/: FindEnTT.cmake  FindGLFW3.cmake
dependencies/metal-cpp/Metal/: MTL4AccelerationStructure.hpp  MTL4Archive.hpp  MTL4ArgumentTable.hpp  MTL4BinaryFunction.hpp  MTL4BinaryFunctionDescriptor.hpp  MTL4CommandAllocator.hpp  MTL4CommandBuffer.hpp  MTL4CommandEncoder.hpp  MTL4CommandQueue.hpp  MTL4CommitFeedback.hpp  MTL4Compiler.hpp  MTL4CompilerTask.hpp  MTL4ComputeCommandEncoder.hpp  MTL4ComputePipeline.hpp  MTL4Counters.hpp  MTL4FunctionDescriptor.hpp  MTL4LibraryDescriptor.hpp  MTL4LibraryFunctionDescriptor.hpp  MTL4LinkingDescriptor.hpp  MTL4MachineLearningCommandEncoder.hpp  MTL4MachineLearningPipeline.hpp  MTL4MeshRenderPipeline.hpp  MTL4PipelineDataSetSerializer.hpp  MTL4PipelineState.hpp  MTL4RenderCommandEncoder.hpp  MTL4RenderPass.hpp  MTL4RenderPipeline.hpp  MTL4SpecializedFunctionDescriptor.hpp  MTL4StitchedFunctionDescriptor.hpp  MTL4TileRenderPipeline.hpp  MTLAccelerationStructureCommandEncoder.hpp  MTLAccelerationStructureTypes.hpp  MTLAllocation.hpp  MTLArgument.hpp  MTLArgumentEncoder.hpp  MTLBinaryArchive.hpp  MTLBlitCommandEncoder.hpp  MTLBlitPass.hpp  MTLBuffer.hpp  MTLCaptureManager.hpp  (+34 more)
include/: beacon.hpp  components.h  components.hpp  event.hpp  math_utils.hpp  simulator.hpp  stager.hpp  vectors.h  window.hpp
include/dtypes/: colors.h  components.h  vectors.h
include/math/: vectors.hpp
include/rhi/: attachments.hpp  bridges.hpp  gpu_context.hpp  gpu_interface.hpp  gpu_types.hpp  mtl_ptr.hpp  render_packet.hpp  renderer.hpp  utils.hpp  window.hpp
shaders/: intersections.metal  present.metal  raytracing.metal
shaders/metal/: intersections.metal  raytracer.metal  raytracing.metal
src/: main.cpp  math_utils.cpp  simulator.cpp  stager.cpp  window.cpp
src/math/: vectors.cpp
src/rhi/: attachments.cpp  bridges.mm  gpu_interface.cpp  mtl_ptr.cpp  package_implementation.cpp  render_packet.cpp  renderer.cpp  utils.cpp  window.cpp
